<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@drawable/ikon_onboard_1">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/logo_splash"
        android:layout_marginTop="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/onboard_1_headline"
            android:textStyle="bold"
            android:fontFamily="@font/font_satoshi"
            android:textSize="25sp"
            android:textColor="@color/onboard_headline_color"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginBottom="12dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/onboard_1_desc"
            android:fontFamily="@font/font_satoshi"
            android:textSize="17sp"
            android:textColor="@color/onboard_desc_color"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginBottom="12dp"/>

        <Button
            android:id="@+id/nextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/background_button_onboard"
            android:text="@string/onboard_1_button"
            android:textSize="16sp"
            android:fontFamily="@font/font_satoshi"
            android:textColor="@color/onboard_button_text_color"
            android:textAllCaps="false"
            android:layout_gravity="center"
            android:padding="22dp"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>