<?xml version="1.0" encoding="utf-8"?>
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/sign_up">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="20dp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_gravity="center"
            android:gravity="center">
        </LinearLayout>


        <LinearLayout
            android:id="@+id/headerTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="16dp"
            app:layout_constraintTop_toTopOf="parent">
            <com.google.android.material.card.MaterialCardView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:backgroundTint="@color/theme_button_background"
                android:elevation="4dp"
                app:cardCornerRadius="50dp"
                app:cardElevation="8dp"
                android:layout_gravity="center">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ikon_left_arrow" />
            </com.google.android.material.card.MaterialCardView>

            <ImageView
                android:layout_width="0dp"
                android:layout_weight="1.0"
                android:layout_height="match_parent"
                android:src="@drawable/logo_splash"
                android:layout_gravity="center"
                android:gravity="center" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/subHeaderDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="64dp"
            app:layout_constraintTop_toBottomOf="@+id/headerTitle">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:textColor="@color/register_headline"
                android:textStyle="bold"
                android:fontFamily="@font/font_satoshi"
                android:textSize="25sp"
                android:gravity="center">

            </TextView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/support"
                    android:textColor="@color/click_here"
                    android:fontFamily="@font/font_satoshi"
                    android:textSize="15sp"
                    android:gravity="center"
                    android:layout_gravity="center">

                </TextView>
                <TextView
                    android:id="@+id/click_here"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:text="@string/click_here"
                    android:textColor="@color/green"
                    android:fontFamily="@font/font_satoshi"
                    android:textSize="15sp"
                    android:gravity="center"
                    android:layout_gravity="center">

                </TextView>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="540dp"
            android:orientation="vertical"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintTop_toBottomOf="@+id/subHeaderDesc"
            app:layout_constraintBottom_toBottomOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="6dp"
                android:background="@drawable/sign_up"
                android:text="@string/username"
                android:textSize="10sp"
                android:fontFamily="@font/font_satoshi"
                android:textColor="@color/username_password"
                android:textAllCaps="false"
                android:layout_gravity="center"
                android:gravity="center"/>

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="6dp"
                android:background="@drawable/sign_up"
                android:text="@string/email"
                android:textSize="10sp"
                android:fontFamily="@font/font_satoshi"
                android:textColor="@color/username_password"
                android:textAllCaps="false"
                android:layout_gravity="center"
                android:gravity="center"/>

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="6dp"
                android:background="@drawable/sign_up"
                android:text="@string/password"
                android:textSize="10sp"
                android:fontFamily="@font/font_satoshi"
                android:textColor="@color/username_password"
                android:textAllCaps="false"
                android:layout_gravity="center"
                android:gravity="center"
                android:drawableEnd="@drawable/hide"
                android:drawablePadding="6dp"/>


            <TextView
                android:id="@+id/recovery_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/recovery_password"
                android:textSize="8sp"
                android:fontFamily="@font/font_satoshi"
                android:textColor="@color/recovery"
                android:textAllCaps="false"
                android:padding="22dp">

            </TextView>

            <TextView
                android:id="@+id/signUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/background_button_onboard"
                android:text="@string/create_account"
                android:textSize="10sp"
                android:fontFamily="@font/font_satoshi"
                android:textColor="@color/white"
                android:textAllCaps="false"
                android:layout_gravity="center"
                android:gravity="center"
                android:padding="22dp"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_marginBottom="150dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="8dp"
                    android:src="@drawable/line_3"
                    android:gravity="center">

                </ImageView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="Or"
                    android:textColor="@color/white">

                </TextView>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:src="@drawable/line_4">

                </ImageView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginTop="-190dp"
                android:gravity="center"
                android:layout_gravity="center">

                <ImageView
                    android:id="@+id/google"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/google"
                    android:layout_marginRight="70dp"
                    android:gravity="center"
                    android:layout_gravity="center">
                </ImageView>
                <ImageView
                    android:id="@+id/apple"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/apple"
                    android:gravity="center"
                    android:layout_gravity="center">
                </ImageView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginTop="-50dp"
                android:gravity="center"
                android:layout_gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/member"
                    android:textColor="@color/apple"/>

                <TextView
                    android:id="@+id/registerButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/register_now"
                    android:textColor="@color/blue"
                    android:layout_marginStart="8dp"/>
            </LinearLayout>


        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>