<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/register_or_signup"
    android:fitsSystemWindows="true">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/backButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:backgroundTint="@color/theme_button_background"
        android:elevation="4dp"
        app:cardCornerRadius="50dp"
        app:cardElevation="8dp"
        android:layout_margin="16dp"
        android:layout_gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:scaleType="centerCrop"
            android:src="@drawable/ikon_left_arrow" />
    </com.google.android.material.card.MaterialCardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/logo_splash"
            android:layout_gravity="center"
            android:layout_marginBottom="24dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_headline"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginBottom="12dp"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_desc"
            android:textColor="@color/onboard_desc_color"
            android:textSize="18sp"
            android:layout_gravity="center"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_marginTop="24dp">

            <Button
                android:layout_width="0dp"
                android:layout_weight="1.0"
                android:text="@string/sign_up"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:background="@drawable/background_button_onboard"
                android:layout_height="match_parent"/>

            <Button
                android:layout_width="0dp"
                android:layout_weight="1.0"
                android:text="@string/sign_up"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:background="@color/transparent"
                android:layout_height="match_parent"/>
        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:id="@+id/subImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ikon_register_or_signup"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>